# CreedCortex

./: CMakeLists.txt  README.md
datasets/: mnist.csv
include/: CreedAccuracy.hpp  CreedActivations.hpp  CreedAdam.hpp  CreedConv2D.hpp  CreedCore.hpp  CreedCortex.hpp  CreedCrossEntropy.hpp  CreedDense.hpp  CreedGlorot.hpp  CreedLayer.hpp  CreedLoss.hpp  CreedMNIST.hpp  CreedMSE.hpp  CreedMatrix.hpp  CreedMetric.hpp  CreedOptimizer.hpp  CreedSGD.hpp  CreedSGDMomentum.hpp  CreedSequential.hpp  CreedSimpleDerivative.hpp  CreedStandardDistribution.hpp  CreedWeightInitializer.hpp  Layer.hpp
src/: CreedAccuracy.cpp  CreedActivations.cpp  CreedAdam.cpp  CreedCUDA.cu  CreedConv2D.cpp  CreedCrossEntropy.cpp  CreedDense.cpp  CreedGlorot.cpp  CreedLayer.cpp  CreedMNIST.cpp  CreedMSE.cpp  CreedMatrix.cpp  CreedSGD.cpp  CreedSGDMomentum.cpp  CreedSequential.cpp  CreedSimpleDerivative.cpp  CreedStandardDistribution.cpp
test/: BasicTest.cpp  MNIST.cpp
