cmake_minimum_required(VERSION 3.27)
project(CreedCortex VERSION 0.1.0 LANGUAGES CXX)
option(BUILD_TESTS "Whether to build test applications" ON)
find_package(xtensor REQUIRED)
add_library(CreedCortex "src/CreedLayer.cpp" "src/CreedDense.cpp")
target_link_libraries(CreedCortex PUBLIC xtensor)
if(BUILD_TESTS)
    message("Building tests")
    add_executable(BasicTest "test/BasicTest.cpp")
    add_test(NAME BasicTest COMMAND BasicTest)
    target_link_libraries(BasicTest PUBLIC CreedCortex)
endif()
target_include_directories(CreedCortex PUBLIC "include")