cmake_minimum_required(VERSION 3.27)
project(CreedCortex VERSION 0.1.0 LANGUAGES CXX)
option(BUILD_TESTS "Whether to build test applications" ON)
find_package(xtensor REQUIRED)
find_package(xtensor-blas REQUIRED)
add_library(CreedCortex "src/CreedLayer.cpp" "src/CreedDense.cpp" "src/CreedActivations.cpp" "src/CreedSequential.cpp"
    "src/CreedMSE.cpp" "src/CreedSimpleDerivative.cpp" "src/CreedSGD.cpp" "src/CreedAccuracy.cpp")
target_link_libraries(CreedCortex PUBLIC xtensor xtensor-blas)
install(FILES "datasets/mnist.csv" DESTINATION share)
if(BUILD_TESTS)
    message("Building tests")
    add_executable(BasicTest "test/BasicTest.cpp")
    add_test(NAME BasicTest COMMAND BasicTest)
    target_link_libraries(BasicTest PUBLIC CreedCortex)
    add_executable(MNIST "test/MNIST.cpp")
    add_test(NAME MNIST COMMAND MNIST)
    target_link_libraries(MNIST PUBLIC CreedCortex)
endif()
target_include_directories(CreedCortex PUBLIC "include")